// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Avatar Basic usage 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Avatar__StyledDiv-a8mb4w-0 lfkFKo"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bwdYbO"
  >
    ASK
  </span>
</div>
`;

exports[`Storyshots Molecules | Avatar Best practice, with element as children 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Avatar__StyledDiv-a8mb4w-0 lfkFKo"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bwdYbO"
  >
    <abbr
      title="Investeringssparkonto"
    >
      ISK
    </abbr>
  </span>
</div>
`;

exports[`Storyshots Molecules | Avatar Different sizes 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Size \`s\`
    </div>
    <div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Avatar__StyledDiv-a8mb4w-0 gtjwZn"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 cgzpVS"
        >
          ASK
        </span>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Size \`m\` (default)
    </div>
    <div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs Avatar__StyledDiv-a8mb4w-0 lfkFKo"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bwdYbO"
        >
          ASK
        </span>
      </div>
    </div>
  </div>
</div>
`;
